# ChangeLog for app-backup/rear
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/rear/ChangeLog,v 1.3 2014/08/10 01:54:00 patrick Exp $

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> rear-1.15-r1.ebuild,
  rear-1.15.ebuild:
  Fix description for more repoman happy

*rear-1.15-r1 (26 Oct 2013)

  26 Oct 2013; Tom Wijsman <TomWij@gentoo.org>
  +files/rear-1.15-add-support-for-gentoo-kernels.patch, +rear-1.15-r1.ebuild:
  Revision bump, support Gentoo kernels; proxied commit for Timo Eissler
  (morlix), fixes bug #489456.

*rear-1.15 (17 Oct 2013)

  17 Oct 2013; Tom Wijsman <TomWij@gentoo.org> +metadata.xml, +rear-1.15.ebuild:
  New ebuild for app-backup/rear, fully automated disaster recovery supporting a
  broad variety of backup strategies and scenarios. Proxied commit for Timo
  Eissler, who will be proxy maintaining this package. Thanks to bacce for
  reporting the package and providing an initial version, also thanks to n4cer
  for minor improvements.