@@ -1,6 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX rear-1.15-add-support-for-gentoo-kernels.patch 817 SHA256 526eeb218408d008fc05a05319c7a4b283dca05f686390bacda3a1bc5f4b8e56 SHA512 b60b77276c6be79324c8df30365950cc864751c96e6373c8231a60a6293046571cb2dad75423f3e1beaea28597c52a431e7d16b01d8c8cb6f279cd1428670659 WHIRLPOOL fd69a30db414a0db1b1f92584c62363eb4be620c293c74931e0dc5a3ef8cb6b5c154dd7deacab33e6f91bfb2df0639bbf481f5c4c242b3ab70fb47c28b43c562
 DIST rear-1.15.tar.gz 258153 SHA256 77c257a692c5e8c9e6deadf194d092718fd90e727ad3df9ed525b3a2e42f0cef SHA512 dc953c33b82f221de6c2acd7ffbb26c34b86aebcd7f8a4d7d520a1d08c15c723fed75326b8e19614f5e09f6436d392091b362b350ffad06caf10c711eb97fcb2 WHIRLPOOL e9811925d0e4a4e5d155be09f1ab212b5d70b687031c53d7c599dbbdd89d2d8aa0edb96550b9999dc7ed0ae1975b586a13eb3c666752e82bfa678fc02f84bee4
+DIST rear-1.17.0.tar.gz 299444 SHA256 c3fe36878aca14558d5cd18b0190699093031449f49db97a63eaf6f2fc3a9f6e SHA512 4b9991dc14138e6a2cd28c9fb9f1dcf46ea1a580454bb2c966024481657a102cc849baf6af5ebfa0793ac3f5ebff5b07abc87d1e4b02e1496a0f87b8cf79284e WHIRLPOOL bb83180daeeabed9464aaf55ba5a6880d1415c122f5663aecbd5e48db7137c367e02384fa176cd45d535cf867e44b4824d27633db28c59eba38f25ee7aed735c
 EBUILD rear-1.15-r1.ebuild 1354 SHA256 a7dbc6801a93f6aa81f32e7c8ba7c983214e2fa8dced8fc17c328b49e38592b4 SHA512 8a1ea3e54a632a5ff4743c17845aec740eca0e4f024b3e70f320be99219a88bdea4fb112bebcc6a75450af3d472a4fc1f934903c43e4e9738df62af27ef22800 WHIRLPOOL 9e294d15828a991b637acafc8f0bac6462e1bee3000697e539978bdf93bc8c461332e01396955e3fe4db4b4b27e67c57097c256ba4bfeade9762527a7178a037
-EBUILD rear-1.15.ebuild 1251 SHA256 4b65db5a12aa63e67110cd85ae7e4dddf501d594d111f704f7bc005debdb7d4d SHA512 69317b942d98053ae52290d41d413e3c9fde241251e6507bd49be9df7659cc12c18351127ed070ff9a2446dd69a080dac88f186552b2870e586210cfb0b5716d WHIRLPOOL de625cef0bedf8059ac1ccf979f55199dfadeab1e204804c5402345e176f9264748ce5710bf400b7f1132f81eeb9295c02a39725796c9bccbda459312e28e258
-MISC ChangeLog 1041 SHA256 e4e6513acca236e1b8b1ef743e3f5a31b952c66a3520d88fd66a6b50a31190bf SHA512 c6a7b9329e032170ce397ce98d81ba69279da4998093dd1bcf1dcd96bfbe69786bb14a419721fd764516547f7e3cade3d9769e9547fb077788bd8f72263761c9 WHIRLPOOL 6e1feab3cbd8d677f7c285ae0b7dc916436995f834d00fcbaa5052eb9a248e09ab4716bfc2b787556aedef3ee9878cf8fc28cb58ee5ff0cd61d28e2d82ba1379
+EBUILD rear-1.17.0.ebuild 1330 SHA256 d8548f7a255879f9b3ac6d3ba54961aff67a36c95b28d51531c6e2869ff214a9 SHA512 22c2614cbd066ea1e628f54c14192d950035e3da6d6701bad57eaffaf093f8c28c48196c3fdb8de06df94f2742e780e2d7e10459e823b271b0cff05789f488d2 WHIRLPOOL 417b11760589a75249a6de8e129296fcd174ab1e02303070035f8ef0305aeefafabe8f86e05c0dd18a5662de8372a1b455552fee4e93b19c7c205969c0c0e955
+MISC ChangeLog 1197 SHA256 01cff258d967180a5c54099d4a856d5813127908fdfeda5f372ea5183861b67f SHA512 49109afe96fedf40e1fb678f2d53fd6324e33f17933742d55465b527b179326276b4db7ef04c1d46e8af884f523780d960e49543e82391dd34ba886ef2d50a69 WHIRLPOOL 9f3732eadb116791244aa1c844afcb0fa431fa908cf1aa91872078345606ebacfe3e36972237a18c6729c373158c745444dbb159dd779a06cc0e0a89c8bb7947
 MISC metadata.xml 786 SHA256 6b46fe60affe823c45ef4e2ec6102888f7addd506f8a78b8cfef77c8e9c4c46b SHA512 8b4c3773fa0dec637d320486cfa00b585054d7825af5a7a6589421c73da4abb8e05889ff8dda2fe3e26da31ecdbb06d648fe70b1a25b6cbb33f34a36ae2de255 WHIRLPOOL f78fbc087ed341c3086ffe031ee8e372b66663ea1b0fc3563a258a8121afbf6c9e7f5798ae54c490fe1212c03ba760827fed4d67eef680faa566941ff0d8cbf5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlURGU8ACgkQso7CE7gHKw2r1wCfTik+NxI7HX4oG0g/C1uHvi5h
+ifYAnA2xs3Qy9ymC+RcSKKOAxnRwQmno
+=Bbyh
+-----END PGP SIGNATURE-----
