@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install
-DESCRIPTION=Fully automated disaster recovery supporting a broad variety of backup strategies and scenarios
-EAPI=5
-HOMEPAGE=http://relax-and-recover.org/
-IUSE=udev
-KEYWORDS=~amd64
-LICENSE=GPL-2
-RDEPEND=dev-libs/openssl net-dialup/mingetty net-fs/nfs-utils sys-apps/iproute2 sys-apps/lsb-release sys-apps/util-linux sys-block/parted sys-boot/syslinux virtual/cdrtools udev? ( virtual/udev )
-SLOT=0
-SRC_URI=mirror://sourceforge/rear/rear-1.15.tar.gz
-_md5_=4b59c379c4c52adaf9d37f9deb14a197
