@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install
+DESCRIPTION=Fully automated disaster recovery, suppors broad variety of backup strategies and scenarios.
+EAPI=5
+HOMEPAGE=http://relax-and-recover.org/
+IUSE=udev
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/openssl net-dialup/mingetty net-fs/nfs-utils sys-apps/gawk sys-apps/iproute2 sys-apps/lsb-release sys-apps/util-linux sys-block/parted sys-boot/syslinux virtual/cdrtools udev? ( virtual/udev )
+SLOT=0
+SRC_URI=mirror://sourceforge/project/rear/rear/1.17/1.17.0/rear-1.17.0.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
+_md5_=d8633544067805e993ec4e5e68244a51
