@@ -1,0 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST pangoterm-0.0_pre20150323.tar.gz 22053 SHA256 8df2bebdd70a77698803d3dd12472b313e29aa5e6387a7b926e0988e0689cf00 SHA512 c8614d51459c68bb03a95e1a59a31d5c199c94001995f880f23a369b9aa6ee72a6769790a8c4592d8829eb52ea246ef051fd36fd729f35c4a80931fd9e42b916 WHIRLPOOL 30adcf8098f3ef03c57f47e7f01ae996572058fc8318e4e31ac2d88ab2d8054c9d5e279bc5721a98bb66a5620356f7dde1aaf7d1a0eeca14c53069eef1126140
+EBUILD pangoterm-0.0_pre20150323.ebuild 759 SHA256 7ea2a1871878d1485be191a6adadfce58351714de54a063a0f767376c13debbc SHA512 d6aae8f4f035296d2b15b4698b31c65b98afdab7c57bc4a64795a9684b6769efea42ef45e7da9afe261ea673e3e771799c7b01cc0aa4fd49547ba4f0afae99d8 WHIRLPOOL c5141f83a939535c86cfe557a90159df54378f6e868f56dac5f6f98a85a4609aebbfdb5d82c5ee67b5ae5798ab441cad8279208e9d4eb0b1d1e54c35e987408a
+MISC ChangeLog 385 SHA256 c6bd02cd5f6852750e1b14bd99d2036411dab0befb898f5d5e9e3e9bbaf09582 SHA512 27d25b3f058ba78dd77bd39e2ba44146d9b5261d7549b5c408acd82334e8db319029193853d2669d32c825d759180dfbe08c6cd1453321d17c2405b7ad88de7d WHIRLPOOL eebc8057124d8f163309dd9fe0bf0cf94046c1bfada8790af1013fbfa2aeb35ec5bb2a393a9a37d7e61b1d03be2794196e7ea4e116fd1ad65fa01c1d103e1002
+MISC metadata.xml 346 SHA256 032935c786729368cf3d67d69a08aaac0da05f87632c46962bee1469d799f4f0 SHA512 63d1ce38f1b19ae896699714dd40ce69c3bfa28f54e7bd03acbd8e49f1f90b22dec9a2861fb61736fe91abe1761cc8ba05ed1da0e4b6ec7bf83a45b3d333a6ea WHIRLPOOL ad96afe0f03f7a3bf0a53974badcc34971501f0ae7ee532ed84cddbcf12d0d01b2cf47ec66352737ce78164530d5027f2063ce66cce2bc7a631f5af183c81752
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJVERd9AAoJEOnlaGd+i01CmMMH/Rqrh0PlPNr2iNoBchFbsIJc
+EgR6yeazsGm5V3PfTRF6XL2POoquTY7GC6GEmlG9wvgCGvcQmFvYa4RcEPT/MI0B
+EOTk1RGwe60btR8zaNxPFkipRsKNP0SseV1wTNP1QMfp02OTuEUcy12CI2oXLJLH
+wGsQG1sdukkyKew9R1dAO3qSFVQ7lOh3sr1ncN79Zmv5A+O7r9mkn0NG+4ah+1MO
+TqI0MXPfqS1/kSY83j14rEnZ/utPAYn/g89Lk3jMqG4+CEZbwhn/5r2x+78kmFgB
+1eykwWAMoSvlJwvsRWu9rd+G3v7X9kl+HSnxS4u/AbYm3v0V2nngE7VOF0MfxQs=
+=lPLv
+-----END PGP SIGNATURE-----
