@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<maintainer>
+		<email>tranquility@gentoo.org</email>
+		<name>Ole Reifschneider</name>
+		<description>A GTK/Pango-based terminal that uses libvterm to provide terminal emulation</description>
+	</maintainer>
+</pkgmetadata>
