@@ -1,6 +1,12 @@
 # ChangeLog for app-backup/rear
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/rear/ChangeLog,v 1.3 2014/08/10 01:54:00 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-backup/rear/ChangeLog,v 1.4 2015/03/24 07:58:55 idella4 Exp $
+
+*rear-1.17.0 (24 Mar 2015)
+
+  24 Mar 2015; Ian Delaney <idella4@gentoo.org> +rear-1.17.0.ebuild,
+  -rear-1.15.ebuild:
+  bump, rm oldest, fixes Bug #543816
 
   10 Aug 2014; Patrick Lauer <patrick@gentoo.org> rear-1.15-r1.ebuild,
   rear-1.15.ebuild:
